<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="#36393f" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/discordlogo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/txt_again"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/txt_welcome"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/txt_email"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:text="@string/txt_again"
                android:textColor="#b9bbbe"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:textColor="#8e928c"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@id/edit_email"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:background="@drawable/edit_field"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/txt_password"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:textColor="#8e928c"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toTopOf="@id/edit_password"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:background="@drawable/edit_field"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/txt_forgot"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgot"
                android:textColor="#5f89da"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@id/btn_login"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn_login"
                android:text="@string/txt_login"
                android:textColor="@android:color/white"
                android:onClick="loginOnClick"
                app:layout_constraintBottom_toTopOf="@id/txt_need"
                android:layout_marginBottom="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_need"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_need"
                android:textColor="#616c77"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="230dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_register"
                android:textColor="#5f89da"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_need"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="230dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>