<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="#36393f" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="#202225">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/menu"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_hash"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/txt_hash"
            android:textSize="32sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toEndOf="@id/btn_menu"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_channel"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toEndOf="@id/txt_hash"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/btn_friends"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/magnifier"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_friends"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/friends"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_attach"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_bg"
                android:background="@null"
                android:scaleType="fitXY"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_attach"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/image"
                app:layout_constraintBottom_toBottomOf="@id/btn_attach"
                app:layout_constraintStart_toStartOf="@id/btn_attach"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_gift"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_bg"
                android:background="@null"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_attach"
                app:layout_constraintStart_toEndOf="@id/btn_attach"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_gift"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/gift"
                app:layout_constraintBottom_toBottomOf="@id/btn_gift"
                app:layout_constraintStart_toStartOf="@id/btn_gift"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_message"
                android:layout_width="278dp"
                android:layout_height="40dp"
                android:hint="@string/txt_message"
                android:background="@drawable/edit_field"
                android:layout_marginStart="10dp"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:paddingBottom="2dp"
                android:textColorHint="#636363"
                app:layout_constraintStart_toEndOf="@id/btn_gift"
                app:layout_constraintBottom_toBottomOf="@id/btn_gift"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_emote"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/emote"
                android:background="@null"
                android:scaleType="fitXY"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="@id/edit_message"
                app:layout_constraintEnd_toEndOf="@id/edit_message"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>